# umbrix-agents

./: README.md  docker-compose.yml  env.example
agents/: Dockerfile  README.md  __init__.py  accuracy_requirements.txt  auth_client.py  config.yaml  conftest.py  create_topics.sh  ensure_topics.py  issues.md  main.py  mock.yaml  pyproject.toml  standalone_demo.py  start_agents.py  test_agents.sh  test_coordinator.py  test_opik_simple.py
agents/benchmarks/: benchmark_harness.py  compare_baselines.py  feeds_bench_v2.json  generate_html_report.py  requirements.txt  test_baseline.json  test_benchmark_core.py  test_report.html  validate_criteria.py  validation_report.json
agents/collector_agent/: Dockerfile.feed_discovery_agent  Dockerfile.rss_discovery_agent  Dockerfile.shodan  __init__.py  collection_tools.py  enhanced_rss_collector.py  feed_seeder_agent.py  misp_feed_agent.py  rss_collector.py  rss_discovery_agent.py  shodan_stream_agent.py  taxii_pull_agent.py
agents/common_tools/: __init__.py  advanced_dspy_modules.py  agent_base.py  backend_opik_integration.py  content_preservation.py  content_tools.py  context.py  cti_feed_tools.py  dead_link_api_schema.py  dead_link_detector.py  dead_link_integration.py  dedupe_store.py  dspy_config_manager.py  dspy_extraction_tool.py  dspy_optimization.py  dspy_optimization_manager.py  dspy_signatures.py  enhanced_feed_enricher.py  enhanced_opik_integration.py  feed_enricher.py  feed_tools.py  graph_tools.py  health.py  http_tools.py  instrumented_dspy_modules.py  intelligent_content_analyzer.py  kafka_tools.py  kafka_wrapper.py  llm_tools.py  logging.py  metrics.py  mistral_dspy_provider.py  mistral_integration_guide.md  models.py  network_tools.py  normalizers.py  opik_admin_ui.py  opik_wrapper.py  plugin_loader.py  redis_tools.py  (+7 more)
agents/config/: retry_config.yaml
agents/discovery_agent/: Dockerfile.intelligent_crawler  README.md  __init__.py  config.py  (+7 more)
(+203 files in other folders)
